--- a/InfoWeb.Presentation/wwwroot/application/views/assignment-type/remove-modal.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignment-type/remove-modal.html
@@ -7,8 +7,8 @@
             <span>¿Desea eliminar el tipo de asignación <strong>{{msge}}</strong>?</span>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-danger btn-raised" type="button" ng-click="ok()">Aceptar</button>
-            <button class="btn btn-primary btn-raised" type="button" ng-click="cancel()">Cancelar</button>
+            <button class="btn btn-primary btn-info" type="button" ng-click="ok()">Aceptar</button>
+            <button class="btn btn-danger btn-info" type="button" ng-click="cancel()">Cancelar</button>
         </div>
     </div>
 </div>
