--- a/InfoWeb.Presentation/wwwroot/application/views/login/login.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/login/login.html
@@ -21,7 +21,7 @@
                                 </div>
                             </div>
                             <!-- end section -->
-                            <div class="section row">
+                            <div class="section row" style="margin-top:15px">
                                 <div class="col-md-12">
                                     <label class="field-label text-muted fs18 mb10">Contraseña</label>
                                     <div class="inner-addon left-addon">
