--- a/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
@@ -8,9 +8,9 @@
                 <div class="section row">
                     <div class="col-md-4">
                         <label>Seleccione el proyecto</label>
-                        <select class="form-control" ng-model="assignment.project" ng-options="project.name for project in projects"
+                        <select class="form-control text-muted" ng-model="assignment.project" ng-options="project.name for project in projects"
                                 required name="projectName">
-                            <option value="">Seleccione proyecto</option>
+                            <option value="" class="text-muted">Seleccione proyecto</option>
                         </select>
                     </div>
                     <div class="col-md-4">
