--- a/InfoWeb.Presentation/wwwroot/application/views/user/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/list.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="pull-left">
-                <button class="btn btn-primary btn-raised btn-info" ng-click="onCreateClicked()"><span class="glyphicon glyphicon-plus"></span>Nuevo</button>
+                <button class="btn btn-primary btn-raised btn-info" ng-click="onCreateClicked()"><span class="glyphicon glyphicon-plus" style="margin-right:5px"></span>Nuevo</button>
             </div>
             <div id="tableList">
                 <table ng-table="model.tableParams" class="table table-hover">
