--- a/InfoWeb.Presentation/wwwroot/application/views/assignments/single-developer.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignments/single-developer.html
@@ -7,30 +7,30 @@
         <div class="panel-body">
             <form name="assignHoursToSingleDeveloper" novalidate ng-submit="create()">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <label>Proyecto</label>
-                        <select class="form-control" ng-model="assignment.project" ng-options="project.name for project in projects"
+                        <select class="form-control selectStyle" ng-model="assignment.project" ng-options="project.name for project in projects"
                                 required name="projectName">
                             <option value="">Seleccione proyecto</option>
                         </select>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <label>Usuario</label>
                         <select class="form-control" ng-model="assignment.user" ng-options="user.name for user in users"
                                 required name="user">
                             <option value="" selected>Seleccione usuario</option>
                         </select>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <label>Tipo de hora</label>
                         <select class="form-control" ng-model="assignment.hourType" ng-options="hourType.name for hourType in hourTypes"
                                 required name="hourType">
                             <option value="">Seleccione tipo de hora</option>
                         </select>
                     </div>
-                    <div class="col-md-6">
+                </div>
+                <div class="row" style="margin-top:10px">                   
+                    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <label>Cantidad de horas</label>
                         <input type="number" class="form-control" ng-model="assignment.hours" 
                                required name="hourCount" ng-min="0"/>
@@ -41,9 +41,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <button type="submit" class="btn btn-primary btn-raised btn-info pull-right"
+                <div class="row" style="margin-top:10px">
+                    <div class="col-md-2 col-lg-2 pull-right">
+                        <button type="submit" class="btn btn-primary btn-block btn-info"
                                 ng-disabled="assignHoursToSingleDeveloper.$invalid">Asignar</button>
                     </div>
                 </div>
