--- a/InfoWeb.Presentation/wwwroot/application/views/project-types/project-types-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project-types/project-types-input.html
@@ -6,15 +6,19 @@
         <div class="panel-body">
             <form name="projectTypeInput" novalidate ng-submit="onButtonClicked()">
                 <div class="section row">
-                    <div class="col-md-12">
+                    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <div class="form-group">
-                            <label>Nombre:</label>
+                            <label>Nombre</label>
                             <input class="form-control" type="text" ng-model="model.name" 
                                    required name="projectTypeName"/>
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary btn-info btn-raised pull-right" ng-disabled="projectTypeInput.$invalid">{{acceptButtonCaption}}</button>
+                <div class="row">
+                    <div class="col-md-2 col-lg-2 pull-right">
+                        <button type="submit" class="btn btn-primary btn-info btn-block" ng-disabled="projectTypeInput.$invalid">{{acceptButtonCaption}}</button>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
