--- a/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
@@ -6,13 +6,13 @@
         <div class="panel-body">
             <form name="projectInput" novalidate ng-submit="onButtonClicked()">
                 <div class="section row">
-                    <div class="col-md-6">
+                    <div class="col-md-4 col-lg-4 col-sm-6">
                         <div class="form-group">
                             <label>Nombre</label>
-                            <input class="form-control col-md-6" type="text" name="projectName" ng-model="model.name" required/>
+                            <input class="form-control col-md-6" type="text" name="projectName" placeholder="Nombre del proyecto" ng-model="model.name" required/>
                         </div>
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4 col-lg-4 col-sm-6">
                         <label>Tipo de Proyecto</label>
                         <select class="form-control" ng-model="model.type" ng-options="projectType.name for projectType in projectTypes track by projectType.id"
                                 name="projectType"  required>
@@ -20,9 +20,7 @@
                             
                         </select>
                     </div>
-                </div>
-                <div class="section row">
-                    <div class="col-md-6">
+                    <div class="form-group col-md-4 col-lg-4 col-sm-6">
                         <label>Cliente</label>
                         <select class="form-control" ng-model="model.client" ng-options="client.name for client in clientes track by client.id"
                                 name="client" required>
@@ -30,7 +28,11 @@
                         </select>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary btn-info btn-raised pull-right" ng-disabled="projectInput.$invalid">{{acceptButtonCaption}}</button>
+                <div class="row">
+                    <div class="col-md-2 col-lg-2 pull-right">
+                        <button type="submit" class="btn btn-primary btn-info btn-block" ng-disabled="projectInput.$invalid">{{acceptButtonCaption}}</button>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
