--- a/InfoWeb.Presentation/wwwroot/application/views/role/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/role/list.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="pull-left">
-                <button class="btn btn-success btn-raised btn-info" ng-click="onCreateClicked()"><span class="glyphicon glyphicon-plus">Nuevo</span></button>
+                <button class="btn btn-success btn-raised btn-info" ng-click="onCreateClicked()"><span class="glyphicon glyphicon-plus" style="margin-right:5px"></span>Nuevo</button>
             </div>
 
 
