--- a/InfoWeb.Presentation/wwwroot/application/views/role/role-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/role/role-input.html
@@ -6,7 +6,7 @@
         <div class="panel-body">
             <form name="roleInput" novalidate ng-submit="onButtonClicked()">
                 <div class="section row">
-                    <div class="col-md-12">
+                    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <div class="form-group">
                             <label>Nombre:</label>
                             <input class="form-control" type="text" ng-model="role.name" 
@@ -14,7 +14,11 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary btn-raised btn-info pull-right" ng-disabled="roleInput.$invalid">{{acceptButtonCaption}}</button>
+                <div class="row">
+                    <div class="col-md-2 col-lg-2 pull-right">
+                        <button type="submit" class="btn btn-primary btn-block btn-info" ng-disabled="roleInput.$invalid">{{acceptButtonCaption}}</button>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
