--- a/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
@@ -33,7 +33,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-2 col-lg-2 pull-right">
+                <div class="col-md-2 col-lg-2 pull-right" style="margin-top:10px">
                     <input type="hidden" name="id" value="model.id" ng-if="model.id" />
                     <button type="submit" class="btn btn-primary btn-info btn-block" ng-disabled="projectInput.$invalid || model.projectsHoursTypes.length == 0">{{acceptButtonCaption}}</button>
                  </div>
