--- a/InfoWeb.Presentation/wwwroot/application/views/hour-type/hour-type-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/hour-type/hour-type-input.html
@@ -8,9 +8,9 @@
                 <div class="section row">
                     <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <div class="form-group">
-                            <label>Nombre:</label>
+                            <label>Nombre</label>
                             <input class="form-control" type="text" ng-model="model.name" 
-                                   name="hourTypeName" required/>
+                                   name="hourTypeName" required placeholder="Tipo de hora"/>
                         </div>
                     </div>
                 </div>
