--- a/InfoWeb.Presentation/wwwroot/application/views/project-types/project-types-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project-types/project-types-input.html
@@ -10,7 +10,7 @@
                         <div class="form-group">
                             <label>Nombre</label>
                             <input class="form-control" type="text" ng-model="model.name" 
-                                   required name="projectTypeName"/>
+                                   required name="projectTypeName" placeholder="Nombre del tipo de proyecto"/>
                         </div>
                     </div>
                 </div>
