--- a/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
@@ -9,7 +9,7 @@
                     <div class="col-md-4">
                         <label>Seleccione el proyecto</label>
                         <select class="form-control text-muted" ng-model="assignment.project" ng-options="project.name for project in projects"
-                                required name="projectName">
+                                required name="projectName" ng-change="onChangeProjectDelegate()">
                             <option value="" class="text-muted">Seleccione proyecto</option>
                         </select>
                     </div>
