--- a/InfoWeb.Presentation/wwwroot/application/views/role/role-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/role/role-input.html
@@ -8,9 +8,9 @@
                 <div class="section row">
                     <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <div class="form-group">
-                            <label>Nombre:</label>
+                            <label>Nombre</label>
                             <input class="form-control" type="text" ng-model="role.name" 
-                                   required name="roleName"/>
+                                   required name="roleName" placeholder="Nombre del rol"/>
                         </div>
                     </div>
                 </div>
