--- a/InfoWeb.Presentation/wwwroot/css/theme.css
+++ b/InfoWeb.Presentation/wwwroot/css/theme.css
@@ -369,3 +369,7 @@ ul.dropdown-menu{
 .modal-content {
     border-radius: 0px ;
 }
+/*width modal detail project*/
+.clsPopup .modal-content{
+    width:100% !important
+}
