--- a/InfoWeb.Presentation/wwwroot/application/views/login/login.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/login/login.html
@@ -31,7 +31,7 @@
                                 </div>
                             </div>
                             <!-- end section -->
-                            <label class="text-danger" ng-show="invalidCredentials">Usuario o contraseña incorrectos</label>
+                            <span class="text-danger" ng-show="invalidCredentials">Usuario o contraseña incorrectos</span>
                         </div>
                     </div>
                 </div>
