--- a/InfoWeb.Presentation/wwwroot/css/theme.css
+++ b/InfoWeb.Presentation/wwwroot/css/theme.css
@@ -1,16 +1,18 @@
 ﻿html {
     height: 100%;
     background: #e9e9e9;
+    overflow-x: hidden;
 }
 
 body {
     width: 100%;
     height: 100%;
-    min-height: 900px;
+   /* min-height: 900px;*/
     margin: 0;
     padding: 0;
     background: #e9e9e9;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x:hidden;
     /* Fix for webkit rendering */
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
@@ -18,7 +20,7 @@ body {
 }
 #main {
     position: relative;
-    min-height: 100%;
+    /*min-height: 100%;*/
     background: #e9e9e9;
 }
 
@@ -372,4 +374,15 @@ ul.dropdown-menu{
 /*width modal detail project*/
 .clsPopup .modal-content{
     width:100% !important
+}
+/*loading login*/
+.clsPopupLoad .modal-content {
+    background-color: transparent;
+    box-shadow: none;
+    border: 0;
+    overflow:hidden
+}
+#modal-body-load {
+    margin-top:50%;
+    margin-left:50%
 }
