--- a/InfoWeb.Presentation/wwwroot/application/views/user/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/list.html
@@ -6,7 +6,7 @@
         <div class="panel-body">
             <div id="search" class="pull-right">
                 <div class="inner-addon left-addon">
-                    <input class="form-control" placeholder="Buscar..." ng-model="search.term" ng-click="model.tableParams.sorting({})" />
+                    <input class="form-control" placeholder="Buscar..." ng-model="search"/>
                     <i class="glyphicon glyphicon-search"></i>
                 </div>
             </div>
@@ -15,26 +15,31 @@
             </div>
             <div id="tableList">
                 <table ng-table="model.tableParams" class="table table-hover">
-                    <thead>
+                    <!--<thead>
                         <tr>
                             <td><b>Nombre</b></td>
                             <td><b>Rol</b></td>
                             <td><b>Opciones</b></td>
                         </tr>
-                    </thead>
+                    </thead>-->
                     <tbody>
                         <tr ng-repeat="user in $data">
-                            <td>
+                            <td title="'Nombre'" sortable="'name'">
                                 {{user.name}}
                             </td>
-                            <td>
+                            <td title="'Rol'" sortable="'role.name'">
                                 {{user.role.name}}
                             </td>
-                            <td>
+                            <td title="'Opciones'">
                                 <span>
                                     <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(user.id)" title="Editar"></span>
                                     <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(user)" title="Eliminar"></span>
                                 </span>
+                            </td>
+                        </tr>
+                        <tr ng-if="$data.length == 0">
+                            <td colspan="3">
+                                <span>No hay datos para mostrar</span>
                             </td>
                         </tr>
                     </tbody>
