--- a/InfoWeb.Presentation/wwwroot/application/views/assignments/assign-group.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignments/assign-group.html
@@ -35,6 +35,26 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+                <div class="row">
+                    <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
+                        <div class="form-group">
+                            <label>Cantidad</label>
+                            <input class="form-control" ng-model="model.hours"
+                                    required name="hpurCount" ng-disabled="!model.project"/>
+                        </div>
+                    </div>
+                    
+                </div>
+
+
+
+
+
                 <div class="row">
                     <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
                         <table class="table table-hover">
